# Vehicle-Rental-System

./: .gitignore  ADMIN_GUI_SCREENSHOT.md  ARCHITECTURE.txt  AuthManager.cpp  AuthManager.h  BUILD.md  Bike.cpp  Bike.h  CMakeLists.txt  COMPLETE_GUI_SHOWCASE.md  CONTRIBUTING.md  CUSTOMER_GUI.md  CUSTOMER_GUI_SCREENSHOT.md  Car.cpp  Car.h  Customer.cpp  Customer.h  DATABASE_GUIDE.md  DESIGN.md  DatabaseManager.cpp  DatabaseManager.h  GUI_COMPLETE_REFERENCE.md  GUI_DOCUMENTATION_SUMMARY.md  GUI_SHOWCASE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RentalManager.cpp  RentalManager.h  SCREENSHOTS.md  SEARCH_FEATURE.md  SEARCH_VISUAL_GUIDE.md  TASK_COMPLETION_SUMMARY.md  USAGE.md  (+8 more)
